src/main/antlr4/com/cpp/grammar/.antlr/MIPSParser.java
// Generated from c:/aaa_se/cpp_compiler/src/main/antlr4/com/cpp/grammar/MIPSParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MIPSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADD=1, ADDU=2, ADDI=3, ADDIU=4, AND=5, ANDI=6, ADD_S=7, ADD_D=8, ABS_S=9, 
		ABS_D=10, BLTZ=11, BGEZ=12, BEQ=13, BNE=14, BLEZ=15, BGTZ=16, BCLF=17, 
		BCLT=18, BREAK=19, C_SEQ_S=20, C_SEQ_D=21, C_LT_S=22, C_LT_D=23, C_LE_S=24, 
		C_LE_D=25, DIV=26, DIVU=27, DIV_S=28, DIV_D=29, J_=30, JAL=31, JALR=32, 
		JR=33, LB=34, LH=35, LW=36, LBU=37, LHU=38, LWCL=39, MUL=40, MFCO=41, 
		MFHI=42, MTHI=43, MFLO=44, MTLO=45, MULT=46, MULTU=47, MUL_S=48, MUL_D=49, 
		NOR=50, NEG_S=51, NEG_D=52, OR=53, ORI=54, SB=55, SH=56, SW=57, SWCL=58, 
		SRL=59, SRA=60, SRAV=61, SUB=62, SUBU=63, SLT=64, SLTU=65, SLTI=66, SLTIU=67, 
		SLL=68, SLLV=69, SLRV=70, SYSCALL=71, SUB_S=72, SUB_D=73, XOR=74, XORI=75, 
		REG_x0=76, REG_at=77, REG_v0=78, REG_v1=79, REG_a0=80, REG_a1=81, REG_a2=82, 
		REG_a3=83, REG_t0=84, REG_t1=85, REG_t2=86, REG_t3=87, REG_t4=88, REG_t5=89, 
		REG_t6=90, REG_t7=91, REG_s0=92, REG_s1=93, REG_s2=94, REG_s3=95, REG_s4=96, 
		REG_s5=97, REG_s6=98, REG_s7=99, REG_t8=100, REG_t9=101, REG_k0=102, REG_k1=103, 
		REG_gp=104, REG_sp=105, REG_fp=106, REG_ra=107, CLOSEING_BRACKET=108, 
		COLON=109, COMMA=110, DOT=111, EQUALS=112, GT=113, LEFT_SHIFT=114, LT=115, 
		MINUS=116, OPENING_BRACKET=117, PLUS=118, RIGHT_SHIFT=119, SLASH=120, 
		NEWLINE=121, WS=122, LINE_COMMENT=123, BLOCK_COMMENT=124, DOUBLE_SLASH_LINE_COMMENT=125, 
		STRING=126, NUMBER=127, HEX_NUMBER=128, BINARY_NUMBER=129, IDENTIFIER=130;
	public static final int
		RULE_asm_file = 0, RULE_newline = 1, RULE_label_definition = 2, RULE_row = 3, 
		RULE_const_list = 4, RULE_comment = 5, RULE_instruction_row = 6, RULE_instruction = 7, 
		RULE_param = 8, RULE_label_name = 9, RULE_expression = 10, RULE_register = 11, 
		RULE_offset_expression = 12, RULE_offset_expression_amount = 13, RULE_offset_expression_register = 14, 
		RULE_mnemonic = 15, RULE_mnemonic_a = 16, RULE_mnemonic_b = 17, RULE_mnemonic_c = 18, 
		RULE_mnemonic_d = 19, RULE_mnemonic_j = 20, RULE_mnemonic_l = 21, RULE_mnemonic_m = 22, 
		RULE_mnemonic_n = 23, RULE_mnemonic_o = 24, RULE_mnemonic_s = 25, RULE_mnemonic_x = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"asm_file", "newline", "label_definition", "row", "const_list", "comment", 
			"instruction_row", "instruction", "param", "label_name", "expression", 
			"register", "offset_expression", "offset_expression_amount", "offset_expression_register", 
			"mnemonic", "mnemonic_a", "mnemonic_b", "mnemonic_c", "mnemonic_d", "mnemonic_j", 
			"mnemonic_l", "mnemonic_m", "mnemonic_n", "mnemonic_o", "mnemonic_s", 
			"mnemonic_x"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'$0'", "'at'", "'$v0'", "'$v1'", "'$a0'", "'$a1'", 
			"'$a2'", "'$a3'", "'$t0'", "'$t1'", "'$t2'", "'$t3'", "'$t4'", "'$t5'", 
			"'$t6'", "'$t7'", "'$s0'", "'$s1'", "'$s2'", "'$s3'", "'$s4'", "'$s5'", 
			"'$s6'", "'$s7'", "'$t8'", "'$t9'", "'$k0'", "'$k1'", "'$gp'", "'$sp'", 
			"'$fp'", "'$ra'", "')'", "':'", "','", "'.'", "'='", "'>'", "'<<'", "'<'", 
			"'-'", "'('", "'+'", "'>>'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ADD", "ADDU", "ADDI", "ADDIU", "AND", "ANDI", "ADD_S", "ADD_D", 
			"ABS_S", "ABS_D", "BLTZ", "BGEZ", "BEQ", "BNE", "BLEZ", "BGTZ", "BCLF", 
			"BCLT", "BREAK", "C_SEQ_S", "C_SEQ_D", "C_LT_S", "C_LT_D", "C_LE_S", 
			"C_LE_D", "DIV", "DIVU", "DIV_S", "DIV_D", "J_", "JAL", "JALR", "JR", 
			"LB", "LH", "LW", "LBU", "LHU", "LWCL", "MUL", "MFCO", "MFHI", "MTHI", 
			"MFLO", "MTLO", "MULT", "MULTU", "MUL_S", "MUL_D", "NOR", "NEG_S", "NEG_D", 
			"OR", "ORI", "SB", "SH", "SW", "SWCL", "SRL", "SRA", "SRAV", "SUB", "SUBU", 
			"SLT", "SLTU", "SLTI", "SLTIU", "SLL", "SLLV", "SLRV", "SYSCALL", "SUB_S", 
			"SUB_D", "XOR", "XORI", "REG_x0", "REG_at", "REG_v0", "REG_v1", "REG_a0", 
			"REG_a1", "REG_a2", "REG_a3", "REG_t0", "REG_t1", "REG_t2", "REG_t3", 
			"REG_t4", "REG_t5", "REG_t6", "REG_t7", "REG_s0", "REG_s1", "REG_s2", 
			"REG_s3", "REG_s4", "REG_s5", "REG_s6", "REG_s7", "REG_t8", "REG_t9", 
			"REG_k0", "REG_k1", "REG_gp", "REG_sp", "REG_fp", "REG_ra", "CLOSEING_BRACKET", 
			"COLON", "COMMA", "DOT", "EQUALS", "GT", "LEFT_SHIFT", "LT", "MINUS", 
			"OPENING_BRACKET", "PLUS", "RIGHT_SHIFT", "SLASH", "NEWLINE", "WS", "LINE_COMMENT", 
			"BLOCK_COMMENT", "DOUBLE_SLASH_LINE_COMMENT", "STRING", "NUMBER", "HEX_NUMBER", 
			"BINARY_NUMBER", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MIPSParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MIPSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Asm_fileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MIPSParser.EOF, 0); }
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public List<NewlineContext> newline() {
			return getRuleContexts(NewlineContext.class);
		}
		public NewlineContext newline(int i) {
			return getRuleContext(NewlineContext.class,i);
		}
		public Asm_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asm_file; }
	}

	public final Asm_fileContext asm_file() throws RecognitionException {
		Asm_fileContext _localctx = new Asm_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_asm_file);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(57);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(54);
							newline();
							}
							} 
						}
						setState(59);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
					}
					setState(60);
					row();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(63); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(65);
				newline();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NewlineContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(MIPSParser.NEWLINE, 0); }
		public NewlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newline; }
	}

	public final NewlineContext newline() throws RecognitionException {
		NewlineContext _localctx = new NewlineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_newline);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Label_definitionContext extends ParserRuleContext {
		public Label_nameContext label_name() {
			return getRuleContext(Label_nameContext.class,0);
		}
		public TerminalNode COLON() { return getToken(MIPSParser.COLON, 0); }
		public Label_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_definition; }
	}

	public final Label_definitionContext label_definition() throws RecognitionException {
		Label_definitionContext _localctx = new Label_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_label_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			label_name();
			setState(76);
			match(COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RowContext extends ParserRuleContext {
		public Instruction_rowContext instruction_row() {
			return getRuleContext(Instruction_rowContext.class,0);
		}
		public Label_definitionContext label_definition() {
			return getRuleContext(Label_definitionContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public Const_listContext const_list() {
			return getRuleContext(Const_listContext.class,0);
		}
		public RowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_row; }
	}

	public final RowContext row() throws RecognitionException {
		RowContext _localctx = new RowContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_row);
		int _la;
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER) {
					{
					setState(78);
					label_definition();
					}
				}

				setState(81);
				instruction_row();
				setState(83);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(82);
					comment();
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER) {
					{
					setState(85);
					label_definition();
					}
				}

				setState(88);
				const_list();
				setState(90);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(89);
					comment();
					}
					break;
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				label_definition();
				setState(94);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(93);
					comment();
					}
					break;
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				comment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Const_listContext extends ParserRuleContext {
		public List<TerminalNode> NUMBER() { return getTokens(MIPSParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(MIPSParser.NUMBER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MIPSParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MIPSParser.COMMA, i);
		}
		public Const_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_list; }
	}

	public final Const_listContext const_list() throws RecognitionException {
		Const_listContext _localctx = new Const_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_const_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(NUMBER);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(100);
				match(COMMA);
				setState(101);
				match(NUMBER);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentContext extends ParserRuleContext {
		public TerminalNode LINE_COMMENT() { return getToken(MIPSParser.LINE_COMMENT, 0); }
		public TerminalNode DOUBLE_SLASH_LINE_COMMENT() { return getToken(MIPSParser.DOUBLE_SLASH_LINE_COMMENT, 0); }
		public TerminalNode BLOCK_COMMENT() { return getToken(MIPSParser.BLOCK_COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if ( !(((((_la - 123)) & ~0x3f) == 0 && ((1L << (_la - 123)) & 7L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Instruction_rowContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public NewlineContext newline() {
			return getRuleContext(NewlineContext.class,0);
		}
		public Instruction_rowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction_row; }
	}

	public final Instruction_rowContext instruction_row() throws RecognitionException {
		Instruction_rowContext _localctx = new Instruction_rowContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_instruction_row);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(109);
				newline();
				}
			}

			setState(112);
			instruction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public MnemonicContext mnemonic() {
			return getRuleContext(MnemonicContext.class,0);
		}
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MIPSParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MIPSParser.COMMA, i);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instruction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			mnemonic();
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(115);
				param();
				setState(118);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(116);
					match(COMMA);
					setState(117);
					param();
					}
					break;
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(120);
					match(COMMA);
					setState(121);
					param();
					}
				}

				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public RegisterContext register() {
			return getRuleContext(RegisterContext.class,0);
		}
		public Offset_expressionContext offset_expression() {
			return getRuleContext(Offset_expressionContext.class,0);
		}
		public Label_nameContext label_name() {
			return getRuleContext(Label_nameContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_param);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				register();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				offset_expression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(128);
				label_name();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(129);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Label_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(MIPSParser.IDENTIFIER, 0); }
		public Label_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_name; }
	}

	public final Label_nameContext label_name() throws RecognitionException {
		Label_nameContext _localctx = new Label_nameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_label_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode OPENING_BRACKET() { return getToken(MIPSParser.OPENING_BRACKET, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode CLOSEING_BRACKET() { return getToken(MIPSParser.CLOSEING_BRACKET, 0); }
		public TerminalNode PLUS() { return getToken(MIPSParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(MIPSParser.MINUS, 0); }
		public TerminalNode BINARY_NUMBER() { return getToken(MIPSParser.BINARY_NUMBER, 0); }
		public TerminalNode HEX_NUMBER() { return getToken(MIPSParser.HEX_NUMBER, 0); }
		public TerminalNode NUMBER() { return getToken(MIPSParser.NUMBER, 0); }
		public TerminalNode IDENTIFIER() { return getToken(MIPSParser.IDENTIFIER, 0); }
		public TerminalNode STRING() { return getToken(MIPSParser.STRING, 0); }
		public RegisterContext register() {
			return getRuleContext(RegisterContext.class,0);
		}
		public TerminalNode DOT() { return getToken(MIPSParser.DOT, 0); }
		public TerminalNode LEFT_SHIFT() { return getToken(MIPSParser.LEFT_SHIFT, 0); }
		public TerminalNode RIGHT_SHIFT() { return getToken(MIPSParser.RIGHT_SHIFT, 0); }
		public TerminalNode SLASH() { return getToken(MIPSParser.SLASH, 0); }
		public TerminalNode GT() { return getToken(MIPSParser.GT, 0); }
		public TerminalNode LT() { return getToken(MIPSParser.LT, 0); }
		public TerminalNode EQUALS() { return getToken(MIPSParser.EQUALS, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}
